# playground

./: .gitattributes  .gitignore  CMakeLists.txt  flake.nix
apps/: CMakeLists.txt  pack.c  smoke.c  smoke3d.c
assets/: pack.json
assets/fonts/builtin/: ui.fonttex
assets/graphics/: smoke_particle.graphic
assets/graphics/builtin/: ambient_occlusion.graphic  outline.graphic  shadow.graphic  shadow_skinned.graphic  sky_cubemap.graphic  sky_gradient.graphic
assets/graphics/builtin/dev/: shape_box_fill.graphic  shape_box_overlay.graphic  shape_box_wire.graphic  shape_cone_fill.graphic  shape_cone_overlay.graphic  shape_cone_wire.graphic  shape_cylinder_fill.graphic  shape_cylinder_overlay.graphic  shape_cylinder_uncapped_fill.graphic  shape_cylinder_uncapped_overlay.graphic  shape_cylinder_uncapped_wire.graphic  shape_cylinder_wire.graphic  shape_hemisphere_uncapped_fill.graphic  shape_hemisphere_uncapped_overlay.graphic  shape_hemisphere_uncapped_wire.graphic  shape_quad_fill.graphic  shape_quad_overlay.graphic  shape_quad_wire.graphic  shape_sphere_fill.graphic  shape_sphere_overlay.graphic  shape_sphere_wire.graphic
assets/graphics/builtin/light/: light_directional.graphic  light_line.graphic  light_line_debug.graphic  light_point.graphic  light_point_debug.graphic  light_spot.graphic  light_spot_debug.graphic
assets/graphics/smoke/: particle.graphic
assets/icons/builtin/: cursor_click.icon  cursor_drag-horizontal.icon  cursor_drag-vertical.icon  cursor_normal.icon  cursor_resize.icon  cursor_select.icon  cursor_target.icon  cursor_text.icon  window_main.icon  window_tool.icon
assets/icons/img/cursors/: click.tga  drag-horizontal.tga  drag-vertical.tga  normal.tga  resize.tga  select.tga  target.tga  text.tga
assets/meshes/builtin/: hexagon.procmesh
assets/scripts/import/mesh/: 0_generic.script
assets/scripts/import/texture/: 1_overrides.script
assets/shaders/: ambient.frag  dyn_depth.frag  dyn_depth_standard.vert  dyn_depth_standard_skinned.vert  outline.frag  standard.frag  standard.vert  standard_skinned.vert  tonemapper.frag
assets/shaders/dev/: dyn_image_viewer.frag  shape_line.vert  shape_mesh.vert
assets/shaders/include/: color.glsl  object.glsl  standard.glsl  tag.glsl
assets/shaders/light/: light_directional.frag  light_directional.vert  light_line.frag  light_line.vert  light_point.frag  light_point.vert  light_spot.frag  light_spot.vert
assets/shaders/sky/: sky_gradient.frag
assets/shaders/smoke/: particle.frag  particle.vert
assets/shaders/ui/: canvas.vert
assets/textures/builtin/: image.atlas
assets/textures/game/: env_diff_irradiance.arraytex  env_spec_irradiance.arraytex  skybox.arraytex
libs/app/src/: app_ecs.c
libs/asset/: CMakeLists.txt
libs/asset/include/asset/: forward.h  graphic.h  manager.h  ref.h  script.h
libs/asset/src/: data.c  data.h  format.c  format.h  import.c  import_mesh.c  import_texture.c  loader.c  loader_font.c  loader_graphic.c  loader_icon.c  loader_inputmap.c  loader_locale.c  loader_mesh.c  loader_mesh_gltf.c  loader_mesh_proc.c  loader_raw.c  loader_script.c  loader_shader.c  loader_shader_glsl.c  loader_sound.c  loader_texture.c  loader_texture_array.c  loader_texture_atlas.c  loader_texture_font.c  manager.c  register.c  repo.h  repo_router.c
libs/asset/test/: config.c  test_loader_script.c
libs/check/include/check/: spec.h
libs/core/src/: alloc_pagecache.c  diag.c
libs/data/src/: jsonschema.c  read_json.c  utils_hash.c  write_json.c
libs/data/test/: test_utils_hash.c
libs/dev/: CMakeLists.txt  hash.json
libs/dev/include/dev/: finder.h  forward.h  hash.h  menu.h  register.h  widget.h
libs/dev/src/: finder.c  log_viewer.c  menu.c  register.c  rend.c  shape.c  stats.c  text.c  widget.c
libs/ecs/include/ecs/: utils.h
libs/ecs/src/: utils.c
libs/gap/include/gap/: icon.h
libs/gap/src/: pal_linux_xcb.c  pal_win32.c  platform.c
libs/geo/: CMakeLists.txt
libs/geo/test/: config.c
libs/input/include/input/: manager.h
libs/jobs/src/: executor.c
libs/rend/: CMakeLists.txt
libs/rend/include/rend/: camera.h  forward.h  object.h  settings.h  tag.h
libs/rend/src/: builder.c  camera.c  light.c  object.c  painter.c  platform.c  register.c  resource.c  settings.c  stats.c  tag.c  view.c  view.h
libs/rend/src/rvk/: repository.c  repository.h
libs/script/: CMakeLists.txt  hash.json
libs/script/include/script/: args.h  diag.h  enum.h  hash.h  intrinsic.h  lex.h  panic.h  prog.h  val.h
libs/script/src/: args.c  binder.c  compile.c  diag.c  eval.c  intrinsic.c  lex.c  mem.c  panic.c  prog.c  read.c  val.c  val.h
libs/script/test/: test_doc.c  test_eval.c  test_lex.c  test_optimize.c  test_prog.c  test_read.c  test_sig.c  test_val.c
libs/snd/: CMakeLists.txt
libs/snd/src/: mixer.c  register.c
libs/ui/include/ui/: canvas.h  color.h  escape.h  layout.h
libs/ui/src/: canvas.c  layout.c  resource.c
